# claude-code-profiles

./: .coverage  .gitignore  LICENSE  Makefile  README.md  ccp.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_ccp.py
